# opencode-kit

./: .gitignore  .pre-commit-config.yaml  AgentRequirements.md  CHANGELOG.md  CommandRequirements.md  Dockerfile  README.md  SkillRequirements.md  docker-compose.yaml  manifest.example.yaml  manifest.ollama-cloud.example.yaml  opencode.json  pyproject.toml
.github/workflows/: ci.yml
docs/migration/: 1.2-to-1.3.md  changelog.yaml
docs/prompts/: setup.md  update.md
kit/: AGENTS.md.template  AUTO_MEMORY.md.template  manifest.schema.json  opencode.json.template
kit/.opencode/: FILE_STRUCTURE.md.template  _shared.md.template
kit/.opencode/agents/: AutoApprover.md.template  BugFixer.md.template  BusinessAnalyst.md.template  CodeReviewer.md.template  CodeWriter.md.template  ConsistencyChecker.md.template  CornerCaseReviewer.md.template  CoverageChecker.md.template  Designer.md.template  Main.md.template  PromptEngineer.md.template  QA.md.template  RequirementsPipeline.md.template  RequirementsQA.md.template  SystemAnalyst.md.template  TestRunner.md.template  debugger.md.template
kit/.planning/: CURRENT.md.template  DECISIONS.md.template
kit/.vault/: _INDEX.md.template
kit/nested/: AGENTS.md.nested.template
profiles/: csharp-aspnet.yaml  generic.yaml  go-gin.yaml  java-spring.yaml  kotlin-jvm-ktor.yaml  kotlin-multiplatform.yaml  minecraft-paper-plugin.yaml  ollama-cloud.yaml  python-fastapi.yaml  requirements-pipeline.yaml  rust-actix.yaml  typescript-nextjs.yaml
scripts/: apply.py  apply_remote.py  run_evals.py
scripts/core/: __init__.py  context.py  costs.py  credentials.py  evaluation.py  file_ops.py  metrics.py  models.py  plugins.py  profiles.py  prompts.py  schema.py  telemetry.py  verify.py  version.py
tests/: test_apply.py  test_integration.py  test_profiles.py
(+36 files in other folders)
